[gd_scene load_steps=9 format=3 uid="uid://cdsbjh5gle7t6"]

[ext_resource type="Script" path="res://Game/hex/hex.gd" id="1_teomv"]
[ext_resource type="Texture2D" uid="uid://dcq8gk07l6xkq" path="res://assets/fantasyhextiles_v3.png" id="3_7powr"]
[ext_resource type="Texture2D" uid="uid://dcq8gk07l6xkq" path="res://release/assets/fantasyhextiles_v3.png" id="3_eu16x"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wbr40"]
atlas = ExtResource("3_eu16x")
region = Rect2(160, 96, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dtiwt"]
atlas = ExtResource("3_eu16x")
region = Rect2(32, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xg3ke"]
atlas = ExtResource("3_7powr")
region = Rect2(0, 0, 32, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_0xeuy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbr40")
}],
"loop": true,
"name": &"blue",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dtiwt")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xg3ke")
}],
"loop": true,
"name": &"green",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_0ghwt"]
radius = 6.6

[node name="Hex" type="Node2D"]
script = ExtResource("1_teomv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -9)
sprite_frames = SubResource("SpriteFrames_0xeuy")
animation = &"green"
autoplay = "green"

[node name="Button" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -14.0
offset_top = -15.0
offset_right = 14.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
action_mode = 0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HexArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HexArea"]
shape = SubResource("CircleShape2D_0ghwt")

[node name="Label" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -14.0
offset_right = 20.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_released" from="." to="." method="_on_mouse_released"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="HexArea" to="." method="_on_hex_area_area_entered"]
[connection signal="area_exited" from="HexArea" to="." method="_on_hex_area_area_exited"]
